2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fread.c:
	Modify heuristic detection of page number types
	for ambiguous ones between roman number and alphabet.
	* tests/mendex.test, tests/pprec[567].ist,
	tests/romalp[ABCD].idx, tests/romalpA-[56].ind,
	tests/romalp[BD]-[567].ind, tests/romalpC-5.ind, Makefile.am:
	Update tests.
	* version.h: Date [22-May-2022]

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* fwrite.c: output to file instead of accumulating too much.
	https://github.com/texjporg/tex-jp-build/issues/137

2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* fread.c: Adapt to arguments of input_line2() in ptexenc-1.4.0.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2022.

2021-09-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fread.c:
	Modify heuristic detection of page number types.
	* tests/mendex.test, tests/range.idx, tests/range[123].ind,
	tests/pprecB.idx, tests/pprec[34].ist, tests/pprecB-[034].ind:
	Update tests.
	* version.h: Date [19-Sep-2021]

2021-09-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fread.c, fwrite.c, sort.c, mendex.h, {,ex}var.h:
	Extend levels of page numbers from 3 to 10
	for compatibility with makeindex.
	Fix a bug of page ranges with multi-level page numbers.
	* fread.c:
	Strict check for "page_precedence" and "page_compositor" in style file.
	* fwrite.c:
	Do not break lines before "delim_n".
	* tests/mendex.test, tests/range.idx, tests/range[123].{ist,ind},
	removed tests/rangetwo.*:
	Update tests.
	* version.h: Date [18-Sep-2021]

2021-09-04  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, version.h:
	Version 3.6 [4-Sep-2021].
	* styfile.c, sort.c, fwrite.c, mendex.h, {,ex}var.h:
	Support output order of symbols and numbers separately
	when "symbol_flag" is 2 in style file.

2021-08-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c:
	Strict check for "character_order" in style file.